# SDA

./: README.md
BinaryTree/: AB.cpp  AB.h  CMakeLists.txt  IteratorAB.cpp  IteratorAB.h  TestExtins.cpp  TestScurt.cpp
Dictionary_DynamicVector/: CMakeLists.txt
Dictionary_DynamicVector/Proiect C++/: App.cpp  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h
Dictionary_DynamicVector/Teste/: TestExtins.cpp  TestScurt.cpp
List_SLL/Proiect C++/: App.cpp  IteratorLI.cpp  IteratorLI.h  LI.cpp  LI.h
RareMatrix-HashTable/: CMakeLists.txt
RareMatrix-HashTable/Proiect C++/: Matrice.cpp  Matrice.h
RareMatrix-HashTable/Teste/: TestExtins.cpp
SortedList_SLL_DynamicVector/: CMakeLists.txt
SortedList_SLL_DynamicVector/Proiect C++/: App.cpp  IteratorLO.cpp  IteratorLO.h  LO.cpp  LO.h
SortedList_SLL_DynamicVector/Teste/: TestExtins.cpp  TestScurt.cpp
